--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>products</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>Products</h1>
+    <h1>Home</h1>
     <hr>
+    
     <button id="checkout">
         Pay with PayPal
     </button>
