--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,6 +9,10 @@
     <h1>Home</h1>
     <hr>
     
+    <button>
+        <a href="courses/">See courses</a>
+    </button>
+    
     <button id="checkout">
         Pay with PayPal
     </button>
