payment details bones

--- a/src/public/payed.html
+++ b/src/public/payed.html
@@ -6,7 +6,7 @@
     <title>payed</title>
 </head>
 <body>
-    <h1>Thanks for your purchase!</h1>
+    <h1>Thanks {name} for your purchase!</h1>
     <hr>
     
 </body>
