login signup bones

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,6 +6,10 @@
     <title>Home</title>
 </head>
 <body>
+    <div>
+        <button><a href="/login">login</a></button>
+        <button><a href="/signup">signup</a></button>
+    </div>
     <h1>Home</h1>
     <hr>
     
