--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,6 +10,7 @@
         <button><a href="/login">login</a></button>
         <button><a href="/signup">signup</a></button>
     </div>
+    <p>Hello</p>
     <h1>Home</h1>
     <hr>
     
